--- a/tests/MIDTERM/donations.html
+++ b/tests/MIDTERM/donations.html
@@ -79,7 +79,7 @@
       </section>
       <section class="how-help-section">
         <div class="section-heading">How You Can Help:</div>
-        <div class="px-4 pb-3 row row-cols-1 row-cols-md-2 g-4">
+        <div class="pay-cards pb-3 row row-cols-1 row-cols-md-2 g-4">
           <div class="col col-xl-3">
             <div class="card h-100">
               <div class="card-body">
@@ -141,8 +141,8 @@
           <div class="col col-md-6">
             <div class="footer-content-header">Get in touch</div>
             <ul class="footer-content d-flex flex-wrap justify-content-evenly">
-              <li class="p-1">Contact us</li>
-              <li class="p-1">Join us</li>
+              <li class="p-1"><a class="footer-link" href="contact.html">Contact Us</a></li>
+              <li class="p-1"><a class="footer-link" href="signup-calendar.html">Join Us</a></li>
             </ul>
           </div>
           <div class="row">
