--- a/tests/MIDTERM/gallery.html
+++ b/tests/MIDTERM/gallery.html
@@ -47,7 +47,41 @@
       </nav>
     </header>
     <main>
-      
+      <div id="donation-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-rdne-6646870.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+        <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
+        </div>
+      </div>
+      <section class="gallery">
+        <div class="section-heading">Gallery</div>
+      </section>
+      <div class="container text-center mb-3">
+        <div class=" row align-items-center">
+          <div class="col">
+            <div class="card mb-2 gallery-cards">
+              <img src="images/ctc_blessing_bags.jpg" class="card-img-top-gallery" alt="blessing bags">
+              <div class="card-body">
+                <p class="card-text">Blessing Bags</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-2 gallery-cards">
+              <img src="images/ctc_care_bags.jpg" class="card-img-top-gallery" alt="car bags">
+              <div class="card-body">
+                <p class="card-text">Care Bags</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-2 gallery-cards">
+              <img src="images/ctc_raffle_basket_winner.jpg" class="card-img-top-gallery" alt="raffle basket winner">
+              <div class="card-body">
+                <p class="card-text">Raffle Basket Winners</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="bg-primary">
       <div class="container text-center w-100">
@@ -66,8 +100,8 @@
           <div class="col col-md-6">
             <div class="footer-content-header">Get in touch</div>
             <ul class="footer-content d-flex flex-wrap justify-content-evenly">
-              <li class="p-1">Contact us</li>
-              <li class="p-1">Join us</li>
+              <li class="p-1"><a class="footer-link" href="contact.html">Contact Us</a></li>
+              <li class="p-1"><a class="footer-link" href="signup-calendar.html">Join Us</a></li>
             </ul>
           </div>
           <div class="row">
