--- a/tests/MIDTERM/contact.html
+++ b/tests/MIDTERM/contact.html
@@ -57,7 +57,7 @@
           <ul class="contact-list m-1 d-flex flex-wrap flex-column justify-content-between">
             <li class="contact-item btn btn-primary">
               <div class="contact-title">Phone:</div>
-              <a class="contact-link" href="tel:">314.496.6623</a>
+              <a class="contact-link" href="tel:+13144966623">314.496.6623</a>
             </li>
             <li class="contact-item btn btn-primary">
               <div class="contact-title">Email:</div>
