Midterm update redid styling and added js for navbar color switching

--- a/tests/MIDTERM/faq.html
+++ b/tests/MIDTERM/faq.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar navbar-expand-lg fixed-top bg-custom">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="images/connecting_through_charity_mockup_draftv3.icon30x30.png" alt="logo"> Connecting Through Charity</a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,14 +45,14 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="faq-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-ann-h-45017-2789781.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+      <div id="faq-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-ann-h-45017-2789781.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
         </div>
       </div>
@@ -115,7 +115,7 @@
 
     </main>
 
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
