--- a/tests/MIDTERM/contact.html
+++ b/tests/MIDTERM/contact.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CTC-Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="scripts/scripts.js"></script>
     <link href="styles/site.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header">
@@ -40,43 +45,45 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="donation-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-sheinshine-3127880.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
-        <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
+      <div id="donation-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-sheinshine-3127880.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center;">
         </div>
       </div>
-      <div class="section-heading">Contact Us</div>
-      <section class="contact-section mx-2 d-flex flex-column flex-md-row align-items-start">
-        <div class="contacts">
-          <ul class="contact-list m-1 d-flex flex-wrap flex-column justify-content-between">
-            <li class="contact-item btn btn-primary">
+      <div class="section-heading">Contact Us!</div>
+      <section class="contact-section mx-4 d-flex flex-column flex-md-row align-items-start">
+        <div class="contacts col">
+          <ul class="contact-list m-1 d-flex flex-wrap flex-column">
+            <li class="contact-item button-dark">
               <div class="contact-title">Phone:</div>
               <a class="contact-link" href="tel:+13144966623">314.496.6623</a>
             </li>
-            <li class="contact-item btn btn-primary">
+            <li class="contact-item button-dark">
               <div class="contact-title">Email:</div>
               <a class="contact-link" href="emailto:ctc.info21@gmail.com">ctc.info21@gmail.com</a>
             </li>
-            <li class="contact-item btn btn-primary">
+            <li class="contact-item button-dark">
               <div class="contact-title">Address:</div>
-              <a class="contact-link" href="">24 Fawn Brook Court, O'Fallon, MO </a>
+              <a class="contact-link" href="https://maps.app.goo.gl/VfttNDC242MELbR49">24 Fawn Brook Court, O'Fallon, MO 63366 </a>
             </li>
           </ul>
+          <iframe class="shadow ms-1 my-2 " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3108.9619352950476!2d-90.77490552406735!3d38.810425471742796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40df35f213475d6b%3A0xa1f398a614e083a1!2sConnecting%20Through%20Charity!5e0!3m2!1sen!2sus!4v1729692862216!5m2!1sen!2sus" width="99%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <form class="signup-form mb-4 w-100 border rounded p-2 my-1 bg-primary">
-          <fieldset class="d-flex flex-row flex-wrap">
-            <legend class="info">Email Us</legend>
-            <div class="mb-1 w-50 p-2">
+        <form class="signup-form mb-4 w-100 p-2 mx-1 my-1 shadow-lg">
+          <fieldset class="d-flex flex-column flex-sm-row flex-wrap">
+            <legend class="info">Email Us <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+              <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+            </svg> </legend>
+            <div class="mb-1 col col-md-6 p-2">
               <label for="fullName" class="form-label">Full Name:</label>
               <input type="text" class="form-control" id="fullName" required>
             </div>
-            <div class="mb-1 w-50 p-2">
+            <div class="mb-1 col col-md-6 p-2">
               <label for="email" class="form-label">Email address:</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
@@ -90,11 +97,11 @@
               <textarea id="message" name="message" class="form-control"></textarea>
             </div>
           </fieldset>
-          <button type="submit" class="btn btn-light mx-2 px-5">Submit</button>
+          <button type="submit" class="button-light mx-2 my-1">Submit</button>
         </form>
       </section>
     </main>
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
@@ -135,6 +142,5 @@
           </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
