--- a/tests/MIDTERM/donations.html
+++ b/tests/MIDTERM/donations.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CTC-Donations</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="scripts/scripts.js"></script>
     <link href="styles/site.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header">
@@ -41,14 +46,14 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html">DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="donation-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-liza-summer-6347730.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+      <div id="donation-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-liza-summer-6347730.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
         </div>
       </div>
@@ -82,9 +87,10 @@
         <div class="pay-cards pb-3 row row-cols-1 row-cols-md-2 g-4">
           <div class="col col-xl-3">
             <div class="card h-100">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">Cash</h5>
-                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Tincidunt dis parturient pulvinar varius, ad eu bibendum. Interdum finibus netus ornare enim sem. Tristique est vivamus molestie laoreet semper sed habitasse condimentum sagittis. Erat conubia justo neque maximus lobortis dis.<br> Posuere fermentum elementum turpis ipsum id curae a faucibus.</p>
+                <p class="card-text">We accept Cash Donations. Please contact and meet us! </p>
+                <button class="button-dark"><a class="card-link text-light " href="contact.html">Contact Us</a></button>
               </div>
             </div>
           </div>
@@ -95,7 +101,7 @@
                 <form action="https://www.paypal.com/donate" method="post" target="_top">
                   <input type="hidden" name="business" value="T5KQ5ECGFAEW2" />
                   <input type="hidden" name="no_recurring" value="0" />
-                  <input type="hidden" name="item_name" value="This is for previewing on websites" />
+                  <input type="hidden" name="item_name" value="This is for previewing on websites DO NOT DONATE-THIS IS A PLACEHOLDER" />
                   <input type="hidden" name="currency_code" value="USD" />
                   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
                   <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
@@ -105,10 +111,10 @@
           </div>
           <div class="col col-xl-3">
             <div class="card h-100">
-              <img src="images/venmo copy.png" class="p-3 card-img-top" alt="...">
+              <img src="images/venmo copy.png" class="p-3 card-img-top mt-5" alt="...">
               <div class="card-body text-center d-flex flex-column justify-content-between">
-                <p class="card-text">Send on Venmo</p>
-                <button class="btn btn-primary"><a class="card-link text-light " href="https://www.venmo.com/u/JonReyBau">@JonReyBau</a></button>
+                <p class="card-text"></p>
+                <button class="button-dark"><a class="card-link text-light " href="#">@ThisIsWhereCTCVenmoWouldGo**</a></button>
               </div>
             </div>
           </div>
@@ -117,14 +123,14 @@
               <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">Other</h5>
                 <p class="card-text">Get in contact with us! Let us know what you have to offer and we can discuss further.</p>
-                <button class="btn btn-primary"><a class="card-link text-light " href="contact.html">Contact Us</a></button>
+                <button class="button-dark"><a class="card-link text-light " href="contact.html">Contact Us</a></button>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
@@ -165,6 +171,5 @@
           </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
