--- a/tests/MIDTERM/gallery.html
+++ b/tests/MIDTERM/gallery.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CTC-Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="scripts/scripts.js"></script>
     <link href="styles/site.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header">
@@ -40,14 +45,14 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="donation-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-rdne-6646870.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+      <div id="donation-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-rdne-6646870.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
         </div>
       </div>
@@ -57,7 +62,7 @@
       <div class="container text-center mb-3">
         <div class=" row align-items-center">
           <div class="col">
-            <div class="card mb-2 gallery-cards">
+            <div class="card mb-2 gallery-cards shadow">
               <img src="images/ctc_blessing_bags.jpg" class="card-img-top-gallery" alt="blessing bags">
               <div class="card-body">
                 <p class="card-text">Blessing Bags</p>
@@ -65,7 +70,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-2 gallery-cards">
+            <div class="card mb-2 gallery-cards shadow">
               <img src="images/ctc_care_bags.jpg" class="card-img-top-gallery" alt="car bags">
               <div class="card-body">
                 <p class="card-text">Care Bags</p>
@@ -73,7 +78,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-2 gallery-cards">
+            <div class="card mb-2 gallery-cards shadow">
               <img src="images/ctc_raffle_basket_winner.jpg" class="card-img-top-gallery" alt="raffle basket winner">
               <div class="card-body">
                 <p class="card-text">Raffle Basket Winners</p>
@@ -83,7 +88,7 @@
         </div>
       </div>
     </main>
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
@@ -124,6 +129,5 @@
           </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
