--- a/tests/MIDTERM/index.html
+++ b/tests/MIDTERM/index.html
@@ -45,14 +45,14 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-julia-m-cameron-6994806.jpg); background-repeat: no-repeat; background-position: center; background-position-y: top; background-size: 200vh;">
+      <div id="hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-julia-m-cameron-6994806.jpg); background-repeat: no-repeat; background-position: center; background-position-y: top; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
           <img class="d-flex col-2-lg mb-4" src="images/connecting_through_charity_mockup_draftv3.no_outline (1).png" alt="logo" width="200px">
           <div class="hero-text bg-custom col-8-lg col-12-md rounded pb-2">
@@ -78,8 +78,8 @@
         <div class="section-heading">Mission:</div>
           <div class="section-body">Connecting Through Charity provides year-round giving to the local community to help children, families, and individuals in need overcome hardship.</div>
           <div class="section-link">
-            <a class=" btn btn-primary border-2 border-primary  " href="signup-calendar.html">Join Us</a>
-            <a class="btn btn-light border-primary text-primary border-2" href="contact.html">Contact Us</a>
+            <a class="button-dark" href="signup-calendar.html">Join Us</a>
+            <a class="button-light mx-1" href="contact.html">Contact Us</a>
           </div>
       </section>
 
@@ -160,21 +160,21 @@
                 We are always adding new projects!</div>
             </div>
             </div>
-          <div class="section-link"><a class="btn btn-primary" href="gallery.html">See what we've done</a></div>
+          <div class="section-link"><a class="button-dark" href="gallery.html">See what we've done</a></div>
       </section>
       <div class="toast position-fixed" data-bs-autohide="false" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-body">
           Thank you for visiting our page! Right now we are in desperate need of volunteers and was hoping you could join us. Click 'Take Action' and see if there is a day we can use you.
-          <div class="mt-2 pt-2 border-top">
-            <button type="button" class="btn btn-primary btn-sm"><a class="text-light" href="signup-calendar.html">Take Action!</a></button>
-            <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
+          <div class="mt-2 pt-2 border-top ">
+            <button type="button" class="button-dark"><a class="text-light" href="signup-calendar.html">Take Action!</a></button>
+            <button type="button" class="button-light mx-1" data-bs-dismiss="toast">Close</button>
           </div>
         </div>
       </div>
 
     </main>
 
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
