--- a/tests/MIDTERM/signup-calendar.html
+++ b/tests/MIDTERM/signup-calendar.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CTC-Sign Up!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="scripts/scripts.js"></script>
     <link href="styles/site.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header">
@@ -40,27 +45,30 @@
               <a class="nav-link bg-primary text-light border border-primary border-2 p-2 active" aria-current="page" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="signup-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-liza-summer-6348129.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+      <div id="signup-hero" class=" hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-liza-summer-6348129.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
         </div>
       </div>
       <h1 class="section-heading">Sign up / Volunteer</h1>
       <section class="volunteerSection d-flex flex-wrap p-4">
-        <form class="signup-form w-100 border rounded p-2 my-1 bg-primary">
-          <fieldset class="d-flex flex-row flex-wrap">
-            <legend class="info">Info</legend>
-            <div class="mb-1 w-50 p-2">
+        <form class="signup-form w-100 shadow p-3 p-lg-5 my-1">
+          <fieldset class="d-flex flex-column flex-sm-row flex-wrap">
+            <legend class="info">Info <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-file-person" viewBox="0 0 16 16">
+              <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+            </svg></legend>
+            <div class="mb-1 col col-6-sm  p-2">
               <label for="fullName" class="form-label">Full Name:</label>
               <input type="text" class="form-control" id="fullName" required>
             </div>
-            <div class="mb-1 w-50 p-2">
+            <div class="mb-1 col col-6-sm  p-2">
               <label for="email" class="form-label">Email address:</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
@@ -74,12 +82,14 @@
               <textarea id="message" name="message" class="form-control"></textarea>
             </div>
           </fieldset>
-          <button type="submit" class="btn btn-light mx-2 px-5">Submit</button>
+          <button type="submit" class="button-light mx-2 px-5">Submit</button>
         </form>
-        <iframe class="google-cal border rounded p-1 w-100" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&title=Connecting%20Through%20Charity&src=NWYyODg0OTI4YzA4ZjE5MDVkNDQzOWRiZGYzZTk2MWMyNGM0ZGUwMzAwMjY3ZWU0MWY4NGJhZjdkOTkzYWI4MkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <div class="google-cal pt-2 w-100 align-items-center">
+          <iframe class="mx-lg-2 shadow border-3 border-dark w-100" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&title=Connecting%20Through%20Charity&src=NWYyODg0OTI4YzA4ZjE5MDVkNDQzOWRiZGYzZTk2MWMyNGM0ZGUwMzAwMjY3ZWU0MWY4NGJhZjdkOTkzYWI4MkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
       </section>
     </main>
-    <footer class="bg-primary">
+    <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
           <div class="col col-md-6">
@@ -120,6 +130,5 @@
           </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
