--- a/tests/MIDTERM/gallery.html
+++ b/tests/MIDTERM/gallery.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <section class="gallery">
-        <div class="section-heading">Gallery</div>
+        <div class="section-heading">Gallery:</div>
       </section>
       <div class="container text-center mb-3">
         <div class=" row align-items-center">
