--- a/tests/MIDTERM/contact.html
+++ b/tests/MIDTERM/contact.html
@@ -65,7 +65,7 @@
             </li>
             <li class="contact-item button-dark">
               <div class="contact-title">Email:</div>
-              <a class="contact-link" href="emailto:ctc.info21@gmail.com">ctc.info21@gmail.com</a>
+              <a class="contact-link" href="mailto:ctc.info21@gmail.com">ctc.info21@gmail.com</a>
             </li>
             <li class="contact-item button-dark">
               <div class="contact-title">Address:</div>
