--- a/tests/MIDTERM/faq.html
+++ b/tests/MIDTERM/faq.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body style="min-height: 100vh; display: flex; flex-direction: column;">
     <header id="header">
       <nav class="navbar navbar-expand-lg fixed-top bg-custom">
         <div class="container-fluid">
@@ -52,7 +52,7 @@
       </nav>
     </header>
     <main>
-      <div id="faq-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-ann-h-45017-2789781.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+      <div id="other-hero" class="hero px-4 py-5 overlay text-center" style="background-image: url(images/pexels-ann-h-45017-2789781.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
         <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
         </div>
       </div>
@@ -112,9 +112,8 @@
           </div>
         </div>
       </div>
-
     </main>
-
+    <div style="flex-grow:1"></div>
     <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
