--- a/tests/MIDTERM/index.html
+++ b/tests/MIDTERM/index.html
@@ -87,7 +87,8 @@
         <div class="section-heading">About Us:</div>
 
         <div class="section-content d-flex flex-wrap">
-          <div class="about-para px-4 px-xxl-5 py-2 text-center">Lorem ipsum odor amet, consectetuer adipiscing elit. Phasellus proin massa nostra sit penatibus, etiam ut est arcu. Integer egestas quam efficitur justo volutpat montes. Tempus amet sapien montes aliquet eros arcu sodales cursus neque. Imperdiet faucibus per, ante malesuada pretium aliquam. Blandit feugiat mauris velit mi finibus class nulla erat.<br><br>
+          <div class="about-para px-4 px-xxl-5 py-2 text-center">Connecting Through Charity is a dedicated non-profit organization committed to fostering year-round giving within our local community. Our mission is to support children, families, and individuals facing hardships, helping them overcome challenges through compassion and assistance. By uniting community members and resources, we aim to create lasting positive change and uplift those in need, ensuring that everyone has the opportunity to thrive.
+            <br><br>
             <img loading="lazy" src="images/connecting_through_charity_mockup_draftv3.no_outline (1).png" class="hidden-logo my-xxl-5" width="200" height="200" alt="logo">
           </div>
           <div id="about-carousel" class="carousel slide px-3 px-xxl-5 py-2">
@@ -171,9 +172,7 @@
           </div>
         </div>
       </div>
-
     </main>
-
     <footer class="bg-dark">
       <div class="container text-center w-100">
         <div class="row flex-wrap align-items-start">
@@ -215,6 +214,5 @@
           </div>
         </div>
     </footer>
-   
   </body>
 </html>
