--- a/tests/MIDTERM/contact.html
+++ b/tests/MIDTERM/contact.html
@@ -41,18 +41,18 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
               </li>
             </ul>
-            <div class="nav-item">
-              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
+            <div class="special-nav-item-left">
+              <a class="nav-link p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
-            <div class="nav-item">
-              <a class="text-light nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+            <div class="special-nav-item-right">
+              <a class="nav-link  p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
-      <div id="other-hero" class=" px-4 py-5 overlay text-center" style="background-image: url(images/pexels-sheinshine-3127880.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; ">
+        <div id="other-hero" class=" px-4 py-5 overlay text-center" style="background-image: url(images/pexels-sheinshine-3127880.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center;">
         </div>
       <div class="section-heading">Contact Us!</div>
       <section class="contact-section mx-4 d-flex flex-column flex-md-row align-items-start">
@@ -71,7 +71,7 @@
               <a class="contact-link" href="https://maps.app.goo.gl/VfttNDC242MELbR49">24 Fawn Brook Court, O'Fallon, MO 63366 </a>
             </li>
           </ul>
-          <iframe class="shadow ms-1 my-2 " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3108.9619352950476!2d-90.77490552406735!3d38.810425471742796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40df35f213475d6b%3A0xa1f398a614e083a1!2sConnecting%20Through%20Charity!5e0!3m2!1sen!2sus!4v1729692862216!5m2!1sen!2sus" width="99%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="shadow ms-1 my-2 my-lg-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3108.9619352950476!2d-90.77490552406735!3d38.810425471742796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40df35f213475d6b%3A0xa1f398a614e083a1!2sConnecting%20Through%20Charity!5e0!3m2!1sen!2sus!4v1729692862216!5m2!1sen!2sus" width="99%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <form class="signup-form mb-4 w-100 p-2 mx-1 my-1 shadow-lg">
           <fieldset class="d-flex flex-column flex-sm-row flex-wrap">
@@ -89,7 +89,7 @@
             </div>
             <div class="mb-1 w-100 p-2">
               <label for="subject" class="form-label">Subject: </label>
-              <input type="text" class="form-control" id="subject">
+              <input type="text" class="form-control" id="subject" value="">
             </div>
             <div class="mb-1 w-100 p-2">
               <label for="message" class="form-label">Message:</label>
@@ -128,9 +128,9 @@
             <div class="copyright">&copy; copyright 2024</div>
           </div>
           <div class="col col-md-6">
-            <div>
+            <div >
               <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
               </a>
