--- a/tests/MIDTERM/donations.html
+++ b/tests/MIDTERM/donations.html
@@ -42,11 +42,11 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
               </li>
             </ul>
-            <div class="nav-item">
-              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
+            <div class="special-nav-item-left">
+              <a class="nav-link p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
-            <div class="nav-item">
-              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html">DONATE</a>
+            <div class="special-nav-item-right">
+              <a class="nav-link  p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
@@ -64,19 +64,19 @@
         <div class="section-content p-4">
          <div class="section-item">
           <div class="item-title">Thanksgiving 2024</div>
-          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress shadow-sm my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
           </div>
          </div>
          <div class="section-item">
           <div class="item-title">Adopt a Teacher 2025</div>
-          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress shadow-sm my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 20%"></div>
           </div>
          </div>
          <div class="section-item">
           <div class="item-title">Blessing Bags Made This Year 2024</div>
-          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress shadow-sm my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
           </div>
          </div>
@@ -86,7 +86,7 @@
         <div class="section-heading">How You Can Help:</div>
         <div class="pay-cards pb-3 row row-cols-1 row-cols-md-2 g-4">
           <div class="col col-xl-3">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">Cash</h5>
                 <p class="card-text">We accept Cash Donations. Please contact and meet us! </p>
@@ -95,22 +95,22 @@
             </div>
           </div>
           <div class="col col-xl-3">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="images/paypal copy.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <form action="https://www.paypal.com/donate" class="d-flex flex-column justify-content-between" method="post" target="_top">
                   <input type="hidden" name="business" value="T5KQ5ECGFAEW2" />
                   <input type="hidden" name="no_recurring" value="0" />
                   <input type="hidden" name="item_name" value="This is for previewing on websites DO NOT DONATE-THIS IS A PLACEHOLDER" />
                   <input type="hidden" name="currency_code" value="USD" />
-                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                  <input type="submit" class="button-dark w-100"  border="0" name="submit" value="Donate with Paypal" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
                   <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
                   </form>
               </div>
             </div>
           </div>
           <div class="col col-xl-3">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="images/venmo copy.png" class="p-3 card-img-top mt-5" alt="...">
               <div class="card-body text-center d-flex flex-column justify-content-between">
                 <p class="card-text"></p>
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="col col-xl-3">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">Other</h5>
                 <p class="card-text">Get in contact with us! Let us know what you have to offer and we can discuss further.</p>
@@ -159,7 +159,7 @@
           <div class="col col-md-6">
             <div>
               <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
               </a>
