--- a/tests/MIDTERM/gallery.html
+++ b/tests/MIDTERM/gallery.html
@@ -41,11 +41,11 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
               </li>
             </ul>
-            <div class="nav-item">
-              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
+            <div class="special-nav-item-left">
+              <a class="nav-link p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
-            <div class="nav-item">
-              <a class="donate-button nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+            <div class="special-nav-item-right">
+              <a class="nav-link  p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
           <div class="col col-md-6">
             <div>
               <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
               </a>
