--- a/tests/MIDTERM/donations.html
+++ b/tests/MIDTERM/donations.html
@@ -114,7 +114,7 @@
               <img src="images/venmo copy.png" class="p-3 card-img-top mt-5" alt="...">
               <div class="card-body text-center d-flex flex-column justify-content-between">
                 <p class="card-text"></p>
-                <button class="button-dark"><a class="card-link text-light " href="#">@ThisIsWhereCTCVenmoWouldGo**</a></button>
+                <button class="button-dark"><a class="card-link text-light " href="#">@ConnectingThroughCharity</a></button>
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
             <div class="copyright">&copy; copyright 2024</div>
           </div>
           <div class="col col-md-6">
-            <div>
+            <div class="d-flex flex-row align-items-center justify-content-around">
               <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
@@ -165,6 +165,9 @@
               </a>
               <a href="https://us.nextdoor.com/pages/connecting-through-charity-ofallon-mo/" target="_blank">
                 <img src="images/NextdoorLogo_Lime.png" width="32px" alt="Nextdoor">
+              </a>
+              <a href="https://ranken.edu/" target="_blank">
+                <img src="images/ranken-technical-college-a6fbd386" width="32px" alt="Ranken">
               </a>
             </div>
           </div>
