JS_CH04_LAB update

--- a/labs/JS_CH04_LAB/exercise-1/index.html
+++ b/labs/JS_CH04_LAB/exercise-1/index.html
@@ -25,8 +25,12 @@
             <label>&nbsp;</label>
             <input type="button" id="calculate" value="Calculate MPG">
         </div>
+        <div>
+            <label>&nbsp;</label>
+            <input type="button" id="clear" value="Clear Entries">
+        </div>
     </main>
-    <script src="mpg.js"></script>
+    <script src="mpg.js"></script>   
 </body>
 
 </html>
