--- a/labs/JS_CH04_LAB/exercise-5.html
+++ b/labs/JS_CH04_LAB/exercise-5.html
@@ -24,7 +24,7 @@
     <script>
       const btn = document.querySelector('#button');
 
-      btn.onclick = () => {
+      btn.addEventListener('click', () => {
 
         let income = parseFloat(document.querySelector("#input").value);
         let incomeTaxOwed = 0;
@@ -77,7 +77,7 @@
 
         document.querySelector('#output').innerHTML = (`${incomeTaxOwed.toFixed(2)}`);
         document.querySelector('#input').focus();
-      }
+      });
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
