--- a/labs/JS_CH04_LAB/exercise-4.html
+++ b/labs/JS_CH04_LAB/exercise-4.html
@@ -36,6 +36,7 @@
         </div>
       </fieldset>
       <script>
+        'use strict'
         const $ = selector => document.querySelector(selector);
 
         const makeChange = () => {
